--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,11 @@ body{
     background-color: rgb(235, 123, 4);
     font-family: "Alfa Slab One", serif;
     line-height: 2;
-    font-size: 32px;
+    font-size: 20px;
     width: 90%;
     margin: 0 auto;
 }   
+
 /* navigáció rész */
 nav.nav{
     display: flex;
@@ -43,7 +44,10 @@ ul.navigation li a:hover{
     background-color: #f69903;
     border-radius: 10px;
 }
-
+.material-symbols-outlined.sizeandcolour{
+    font-size: 44px;
+    color: #f69903;
+}
 /* hamburger menü rész */
 div.hamburger{
     flex-direction: column;
@@ -63,16 +67,23 @@ div.hamburger div{
     flex-wrap: wrap;
     justify-content: center;
     align-items: center; 
-    gap: 10px;
+    gap: 20px;
 }
-.flex-item {
+.flex-container .flex-item {
     width: 600px;
-    margin: 20px;
+    margin: 10px;
     text-align: center;
     background-color: #f69903;
     padding: 15px;
     border-radius: 15px;
+    transition: transform 3s ease;
 }
+.flex-container .flex-item:hover {
+    border: solid 5px gray;
+    box-shadow: 8px 8px 10px rgb(239, 236, 236);
+    transform: scaleY(102%);
+}
+
 .box {
     display: flex;
     gap: 10px;
@@ -86,10 +97,6 @@ div.hamburger div{
     margin: 0;
     padding-left: 20px;
     color: #333;
-}
-.flex-container .flex-item:hover {
-    border: solid 5px gray;
-    box-shadow: 8px 8px 10px rgb(239, 236, 236);
 }
 
 .menu_li_flex{
@@ -174,12 +181,13 @@ aside{
 }
 #google_map{
     display: block;
-    margin-left: 0;
+    margin: 0 auto;
     border-radius: 20px;
     margin: 20px;
 }
 .kapcsolat{
-    margin-right: 0;
+    display: block;
+    margin: 0 auto;
     border: solid 4px #f69903;
     padding: 10px;
     margin: 20px;
@@ -204,9 +212,6 @@ h4{
     width: 100%;
     text-align: center;
     display: flex;
-    align-items: center; /* Képek és szöveg középre igazítása */
-    justify-content: center; /* Képek középre igazítása */
-    gap: 10px;
 }
 .dancing_img1{
     height: 120px;
@@ -259,12 +264,10 @@ h4{
 h3{
     color: azure;
     margin: 1em;
-    min-height: 15vh;
 }
 .hambi_nev{
     color: #070707;
-    margin-bottom: 2em;
-    min-height: 30vh;
+    margin-bottom: 1em;
 }
 .menu_szoveg {
     text-align: justify;
@@ -272,14 +275,13 @@ h3{
 
 #menu th, #menu td{
     border:1px solid black;
-    padding: 10px 15px;
+    padding: 10px 10px;
     text-align: left;
 }
 .td3{
     width: 180px;
 }
 #menu{
-    min-height: 140vh;
     background-color: rgb(233, 41, 20);
     color: rgb(255, 251, 0);
     margin: 0 auto;
@@ -288,7 +290,6 @@ h3{
     border: 5px solid #252525;
     border-radius: 4px;
     padding: 20px;
-    margin: 10px;
     table-layout: fixed;
 }
 .menu1{
@@ -355,20 +356,17 @@ a{
     border-radius: 10px;
     margin-left: 20px;
 }
-.left_text {
+.left_text .right_text{
     text-align: justify;
-}
-.right_text{
-    text-align: justify;
+    overflow: hidden;
 }
 
 #bevezeto1{
-    min-height: 80vh;
-    text-align: justify;
-    
+    margin-bottom: 20px;
+    text-align: justify; 
 }
 #bevezeto2{
-    min-height: 60vh;
+    margin-top: 20px;
     text-align: justify;
 }
 
@@ -388,24 +386,23 @@ a{
     margin-bottom: 25px;
     margin-left: 20px;    
 }
-.grid-container{
+
+ .grid-container{
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-    padding: 15px;
-    gap: 12px;
+    margin: 0 auto;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, minmax(150px, auto));
 }
 
 footer{
     background-color: rgb(36, 35, 35);
     color: #fff;
-    min-height: 10vh;
+    margin: 4px;
     text-align: center;
 }
 
 main{
     padding: 20px;
-    min-height: 100vh;
     color: #070707;
     background-color: rgb(233, 41, 20);
     color: rgb(255, 251, 0);
@@ -472,7 +469,7 @@ main{
 
 
 /* reszponzivitás rész */
-@media (max-width: 470px)
+@media (max-width: 600px)
 {
     ul.navigation { 
     position: absolute;
@@ -501,4 +498,15 @@ ul.navigation.active{
   main #menu{
     display: none;
   }
+}
+
+
+/* menu.html- reszponzivitás */
+
+@media (max-width: 650px)
+{   .dancing_img1 .dancing_img2{
+    position: sticky;
+    top: 10px;
+
+}
 }
